--- a/colorGame.css
+++ b/colorGame.css
@@ -6,10 +6,6 @@ h1{
     color: white;
 }
 
-span{
-    color: white;
-}
-
 #container{
     margin: 0 auto;
     max-width: 600px;
@@ -21,4 +17,14 @@ span{
     padding-bottom: 30%;
     float: left;
     margin: 1.66%
+}
+
+#stripe{
+    background: white;
+    height: 30px;
+    text-align: center;
+}
+
+.selected{
+    background: blue;
 }
