--- a/colorGame.css
+++ b/colorGame.css
@@ -1,13 +1,22 @@
 body{
     background: #232323;
+    margin: 0;
+    font-family: "Montserrat";
 }
 
 h1{
+    text-align: center;
+    font-weight: normal;
+    line-height: 1.1;
     color: white;
+    background: steelblue;
+    margin: 0;
+    text-transform: uppercase;
+    padding: 20px 0;
 }
 
 #container{
-    margin: 0 auto;
+    margin: 20px auto;
     max-width: 600px;
 }
 
@@ -16,7 +25,11 @@ h1{
     background: purple;
     padding-bottom: 30%;
     float: left;
-    margin: 1.66%
+    margin: 1.66%;
+    border-radius: 50%; 
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #stripe{
@@ -25,6 +38,35 @@ h1{
     text-align: center;
 }
 
+#message{
+    display: inline-block;
+    width: 20%;
+}
+
+#colorDisplay{
+    font-size: 200%;
+}
+
 .selected{
-    background: blue;
+    color: white;
+    background: steelblue;
+}
+
+button{
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-family: "Montserrat";
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    outline: none;
+}
+
+button:hover{
+    color: white;
+    background: steelblue;
 }
